--- a/client/src/components/common/Home/Projects.module.scss
+++ b/client/src/components/common/Home/Projects.module.scss
@@ -70,27 +70,27 @@
       width: 50% !important;
     }
 
-    @media only screen and (840px <= width < 1120px) {
+    @media only screen and (840px <=width < 1120px) {
       width: 33.3333333333% !important;
     }
 
-    @media only screen and (1120px <= width < 1400px) {
+    @media only screen and (1120px <=width < 1400px) {
       width: 25% !important;
     }
 
-    @media only screen and (1400px <= width < 1680px) {
+    @media only screen and (1400px <=width < 1680px) {
       width: 20% !important;
     }
 
-    @media only screen and (1680px <= width < 1960px) {
+    @media only screen and (1680px <=width < 1960px) {
       width: 16.6666666667% !important;
     }
 
-    @media only screen and (1960px <= width < 2240px) {
+    @media only screen and (1960px <=width < 2240px) {
       width: 14.2857142857% !important;
     }
 
-    @media only screen and (width >= 2240px) {
+    @media only screen and (width >=2240px) {
       width: 12.5% !important;
     }
   }
@@ -99,6 +99,13 @@
     color: #6b808c;
     font-size: 16px;
     padding: 14px 0 14px 2px;
+    white-space: normal;
+    /* Разрешаем перенос текста на новую строку */
+    overflow: visible;
+    /* Показываем всё, что не влезло по высоте */
+    text-overflow: clip;
+    /* Убираем троеточие (...) */
+    word-break: break-word;
   }
 
   .titleIcon {
